--- a/catkin_workspace/src/flatland_plugins_ika/package.xml
+++ b/catkin_workspace/src/flatland_plugins_ika/package.xml
@@ -2,14 +2,14 @@
 <package format="2">
   <name>flatland_ika_plugins</name>
   <version>0.1.0</version>
-  <description>Plugin for the flatland server to support the one track drive.</description>
+  <description>Plugin for the flatland server to support the single track model.</description>
   <license>TODO</license>
 
   <maintainer email="simon.schaefer@ika.rwth-aachen.de">Simon Schaefer</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>flatland_server</depend>
-  <depend>  flatland_plugins</depend>
+  <depend>flatland_plugins</depend>
   <depend>pluginlib</depend>
   <depend>roscpp</depend>
   <depend>yaml-cpp</depend>
